# stitchtoon-gui

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  stitchtoon-gui.spec
.github/ISSUE_TEMPLATE/: bug_report.md  feature_suggestion.md
.github/workflows/: python-app.yml
scripts/: formatter.py
src/: stitchtoon-gui.py
src/stitchtoon_gui/: __init__.py  __main__.py  constants.py  custom.css  layout.ui  mainwindow.py  postprocess.py  process.py  progressbar_worker.py  settings.py
src/stitchtoon_gui/gui/: mainwindow.py  profiles_list_model.py  progressbar_worker.py
src/stitchtoon_gui/gui/resources/: custom.css  layout.ui
src/stitchtoon_gui/threads/: postprocess.py  process.py  update_checker.py
src/stitchtoon_gui/utils/: constants.py  settings.py  version_check.py
