[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitchtoon-gui"
version = "1.1.0"
authors = [
  { name="Beshr Alghalil", email="beshrghalil@protonmail.com" },
]
description = "A powerful program for stitching and cutting webtoons/manhwa/manhua raws."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BishrGhalil/stitchtoon-gui"
"Bug Tracker" = "https://github.com/BishrGhalil/issues"

[project.scripts]
stitchtoon-gui = "stitchtoon_gui.__main__:main"